# serumcv

./: Cargo.toml  LICENSE
crates/video_capture/: Cargo.toml
crates/video_capture/examples/: avfoundation.rs
crates/video_capture/src/: error.rs  lib.rs  prelude.rs
crates/video_capture/src/backends/: mod.rs
crates/video_capture/src/backends/avfoundation/: authorization.rs  mod.rs
crates/video_capture/src/backends/v4l/: device_info.rs  framerate.rs  mod.rs  source.rs
crates/video_capture/src/config/: format.rs  framerate.rs  mod.rs  properties.rs  resolution.rs
examples/: cap_v4l.rs
src/: lib.rs
src/video/: mod.rs
src/video/backends/: mod.rs  v4l.rs
